--- a/src/assets/css/font_icon_style.css
+++ b/src/assets/css/font_icon_style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/font_icon/icomoon.eot?lqrw7x');
-  src:  url('../fonts/font_icon/icomoon.eot?lqrw7x#iefix') format('embedded-opentype'),
-    url('../fonts/font_icon/icomoon.ttf?lqrw7x') format('truetype'),
-    url('../fonts/font_icon/icomoon.woff?lqrw7x') format('woff'),
-    url('../fonts/font_icon/icomoon.svg?lqrw7x#icomoon') format('svg');
+  src:  url('./fonts/font_icon/icomoon.eot?lqrw7x');
+  src:  url('./fonts/font_icon/icomoon.eot?lqrw7x#iefix') format('embedded-opentype'),
+    url('./fonts/font_icon/icomoon.ttf?lqrw7x') format('truetype'),
+    url('./fonts/font_icon/icomoon.woff?lqrw7x') format('woff'),
+    url('./fonts/font_icon/icomoon.svg?lqrw7x#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
