--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -267,7 +267,7 @@ body{
 
 /*--------------------------------- Your position -------------------------------------*/
 .your_position{
-  background-image: url('../img/your_position_back_1.png');
+  background-image: url('http://127.0.0.1:3020/wp-content/uploads/2020/09/your_position_back_1.png');
   background-position-y: center;
   background-position-x: 100%;
   background-repeat: no-repeat;
