background image address was modified

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -230,7 +230,7 @@ body{
 //------------- Design effect -------------
 .design_effect{
   margin-bottom: 113px;
-  background-image: url( '../img/dots_background.png' );
+  background-image: url( 'http://127.0.0.1:3020/wp-content/uploads/2020/09/dots_background.png' );
   background-repeat: no-repeat;
   background-position: right center;
   background-size: contain;
