--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -692,96 +692,112 @@ body{
 
 /*--------------------------------- Faq -------------------------------------*/
 .faq{
+  .container{
+    &>h4{
+      color: $text_color;
+      font-size: 24px;
+      font-weight: 700;
+      margin-bottom: 12px;
+    }
+    &>p{
+      font-size: 18px;
+      font-weight: 400;
+      color: $text_color;
+      margin-bottom: 30px;
+    }
+  }
   padding-top: 107px;
   padding-bottom: 300px;
   margin-bottom: 109px;
   position: relative;
-  background-color: white;
-  &::before{
+  &::before, &::after{
     content: '';
     display: block;
     position: absolute;
+    z-index: -1;
+  }
+  &::before{
     top: 0;
     left: 0;
     width: 239px;
     height: 552px;
-    background-image: url( '../img/top_back.jpg' );
+    background-image: url( 'img/top_back.jpg' );
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
   }
 
   &::after{
-    content: '';
-    display: block;
-    position: absolute;
     top: 274px;
     right: 0;
     width: 360px;
     height: 651px;
-    background-image: url( '../img/bottom_back.jpg' );
+    background-image: url( 'img/bottom_back.jpg' );
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
   }
-  &__collapsible {
-    position: relative;
-    z-index: 1;
-    text-align: right;
-    padding-right: 15px;
-    transition: 0.3s;
-    background-color: transparent;
-    margin-bottom: 20px;
-    opacity: 0.5;
-    color: $text_color;
-    cursor: pointer;
-    width: 100%;
-    border: none;
-    outline: none;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 35px;
-    &:hover, &.active{
-      opacity: 1;
-    }
-    &.active{
-      padding-right: 0;
-      &::after{
+  .schema-faq.wp-block-yoast-faq-block{
+    .schema-faq-section{
+      &:not(:last-child){
+        margin-bottom: 32px;
+      }
+      border-bottom: 1px solid #f0f1f7;
+      .schema-faq-question {
+        display: block;
+        position: relative;
+        z-index: 1;
+        text-align: right;
+        padding-right: 15px;
+        transition: 0.3s;
+        background-color: transparent;
+        margin-bottom: 20px;
+        opacity: 0.5;
+        color: $text_color;
+        cursor: pointer;
+        width: 100%;
+        border: none;
+        outline: none;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 35px;
+        &:hover, &.active{
+          opacity: 1;
+        }
+        &.active{
+          padding-right: 0;
+          &::after{
+            display: none;
+          }
+        }
+        &::after{
+          content: '';
+          display: block;
+          position: absolute;
+          top: 50%;
+          right: 0;
+          transform: translateY(-50%);
+          width: 10px;
+          height: 2px;
+          background-color: $text_color;
+          font-size: 13px;
+          margin-left: 7px;
+        }
+      }
+
+      .schema-faq-answer{
+        text-align: justify;
+        z-index: 1;
+        position: relative;
+        font-weight: 400;
+        line-height: 40px;
+        color: $text_color;
+        font-size: 20px;
+        overflow: hidden;
+        transition: max-height 0.3s;
+        padding-bottom: 32px;
         display: none;
       }
-    }
-    &::after{
-      content: '';
-      display: block;
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
-      width: 10px;
-      height: 2px;
-      background-color: $text_color;
-      font-size: 13px;
-      margin-left: 7px;
-    }
-  }
-
-  &__content {
-    text-align: justify;
-    z-index: 1;
-    position: relative;
-    font-weight: 400;
-    line-height: 40px;
-    border-bottom: 1px solid #f0f1f7;
-    color: $text_color;
-    font-size: 20px;
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 0.3s;
-    &:not(:last-child){
-      margin-bottom: 32px;
-    }
-    p{
-      padding-bottom: 32px;
     }
   }
 }
