--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,4 +1,5 @@
 $accent_color: #ff4342;
-$text_color: #7a7a7a;
+//$text_color: #7a7a7a;
+$text_color: #333333;
 $background_color: #fdfdfd;
 $button_color: #2ec5c0;
