--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -265,7 +265,7 @@ body{
   }
 }
 
-//------------- Design effect -------------
+/*----------- Design effect -------------*/
 .design_effect{
   margin-bottom: 113px;
   background-image: url( 'img/dots_background.png' );
@@ -289,7 +289,7 @@ body{
     }
   }
   &__wrapper{
-    .content{
+    .design_effect_content{
       &>p{
         font-size: 18px;
         line-height: 35px;
@@ -467,7 +467,7 @@ body{
 
 }
 
-//------------- Select team -------------
+/*--------------------------------- Select team -------------------------------------*/
 .select_team{
   position: relative;
   margin-bottom: 300px;
@@ -484,7 +484,7 @@ body{
       box-shadow: 0 0 81px rgba(56, 66, 77, 0.08);
       height: 105px;
       align-items: center;
-      .icon{
+      .select_team_icon{
         position: relative;
         flex: 0 0 auto;
         background-color: $accent_color;
@@ -526,7 +526,7 @@ body{
   }
 }
 
-//------------- Services -------------
+/*----------- Services -------------*/
 .services{
   position: relative;
   margin-bottom: 173px;
@@ -580,7 +580,7 @@ body{
           }
         }
       }
-      .content{
+      .item_content{
         position: relative;
         p{
           padding-bottom: 38px;
@@ -608,7 +608,7 @@ body{
   }
 }
 
-//------------- Ivahid difference -------------
+/*----------- Ivahid difference -------------*/
 .ivahid_difference{
   margin-bottom: 240px;
   &__content{
@@ -622,7 +622,7 @@ body{
 
 }
 
-//------------- Portfolio -------------
+/*----------- Portfolio -------------*/
 .portfolio{
   margin-bottom: 87px;
   padding-bottom: 300px;
@@ -712,7 +712,7 @@ body{
         font-size: 18px;
         font-weight: 400;
         margin-bottom: 0 !important;
-        text-align: center !important;
+        text-align: justify !important;
       }
     }
 
@@ -805,62 +805,64 @@ body{
         margin-bottom: 32px;
       }
       border-bottom: 1px solid #f0f1f7;
-      .schema-faq-question {
-        display: block;
-        position: relative;
-        z-index: 1;
-        text-align: right;
-        padding-right: 15px;
-        transition: 0.3s;
-        background-color: transparent;
-        margin-bottom: 20px;
-        opacity: 0.5;
-        color: $text_color;
-        cursor: pointer;
-        width: 100%;
-        border: none;
-        outline: none;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 35px;
-        &:hover, &.active{
-          opacity: 1;
-        }
         &.active{
-          padding-right: 0;
-          &::after{
-            display: none;
+          .schema-faq-question{
+            padding-right: 0;
+            &::after{
+              display: none;
+            }
           }
         }
-        &::after{
-          content: '';
+        .schema-faq-question {
           display: block;
-          position: absolute;
-          top: 50%;
-          right: 0;
-          transform: translateY(-50%);
-          width: 10px;
-          height: 2px;
-          background-color: $text_color;
-          font-size: 13px;
-          margin-left: 7px;
+          position: relative;
+          z-index: 1;
+          text-align: right;
+          padding-right: 15px;
+          transition: 0.3s;
+          background-color: transparent;
+          margin-bottom: 20px;
+          opacity: 0.5;
+          color: $text_color;
+          cursor: pointer;
+          width: 100%;
+          border: none;
+          outline: none;
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 35px;
+          &:hover{
+            opacity: 1;
+          }
+          &::after{
+            content: '';
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            transform: translateY(-50%);
+            width: 10px;
+            height: 2px;
+            background-color: $text_color;
+            font-size: 13px;
+            margin-left: 7px;
+          }
         }
-      }
 
-      .schema-faq-answer{
-        text-align: justify;
-        z-index: 1;
-        position: relative;
-        font-weight: 400;
-        line-height: 40px;
-        color: $text_color;
-        font-size: 20px;
-        overflow: hidden;
-        transition: max-height 0.3s;
-        padding-bottom: 32px;
-        margin-bottom: 0 !important;
-        display: none;
-      }
+        .schema-faq-answer{
+          text-align: justify;
+          z-index: 1;
+          position: relative;
+          font-weight: 400;
+          line-height: 40px;
+          color: $text_color;
+          font-size: 20px;
+          overflow: hidden;
+          transition: max-height 0.3s;
+          padding-bottom: 32px;
+          margin-bottom: 0 !important;
+          display: none;
+        }
     }
   }
 }
@@ -953,7 +955,7 @@ body{
   }
 }
 
-//------------- Customers -------------
+/*----------- Customers -------------*/
 .customers{
   margin-bottom: 134px;
   &__wrapper{
@@ -985,7 +987,7 @@ body{
   }
 }
 
-//------------- Videos -------------
+/*----------- Videos -------------*/
 .videos{
   margin-bottom: 119px;
   position: relative;
@@ -1009,6 +1011,7 @@ body{
   }
   .item{
     position: relative;
+    text-align: center;
     box-shadow: 0 15px 70px rgba(56, 66, 77, 0.04);
     border-radius: 8px;
     background-color: white;
@@ -1225,12 +1228,15 @@ body{
         font-size: 18px;
         font-weight: 400;
         line-height: 35px;
+        flex: 0 0 50px;
+        display: block;
+        text-align: center;
       }
       .duration{
-        margin-left: 18px;
+        margin-left: 10px;
       }
       .current_time{
-        margin-right: 18px;
+        margin-right: 10px;
       }
       #waveform{
         position: relative;
@@ -1273,7 +1279,7 @@ body{
   }
 }
 
-//------------- Portal -------------
+/*----------- Portal -------------*/
 .portal{
   background-color: $accent_color;
   padding-top: 54px;
@@ -1310,6 +1316,7 @@ body{
         font-size: 24px;
         margin-bottom: 5px;
         position: relative;
+        color: white;
         &::after{
           content: '';
           display: block;
@@ -1332,7 +1339,7 @@ body{
   }
 }
 
-//------------- Order -------------
+/*----------- Order -------------*/
 .order{
   margin-bottom: 100px;
   &__content{
@@ -1388,9 +1395,9 @@ body{
   }
 }
 
-//---------------------- Media queries ----------------------
+/*-------------------- Media queries ----------------------*/
 
-//---------------------- > 1918px ----------------------
+/*-------------------- > 1918px ----------------------*/
 @media only screen and( min-width: 1919px ){
   .your_position{
     &__container{
@@ -1405,7 +1412,7 @@ body{
   }
 }
 
-//---------------------- > 1200px ----------------------
+/*-------------------- > 1200px ----------------------*/
 @media only screen and( min-width: 1200px ){
   //Portal
   .portal{
@@ -1444,17 +1451,6 @@ body{
   .your_position{
     .categories_title_list{
       margin-bottom: 10px !important;
-    }
-  }
-  //Portal
-  .portal__wrapper{
-    flex-direction: column;
-    align-items: center;
-    .img{
-      margin-bottom: 20px;
-    }
-    .content{
-      padding: 0;
     }
   }
 }
@@ -1532,7 +1528,7 @@ body{
   }
 }
 
-//---------------------- < 768px ----------------------
+/*-------------------- < 768px ----------------------*/
 @media only screen and( max-width: 768px ){
   //Select_team
   .select_team__img__label{
@@ -1584,7 +1580,7 @@ body{
 }
 
 
-//---------------------- < 576px ----------------------
+/*-------------------- < 576px ----------------------*/
 @media only screen and( max-width: 576px ){
   //general
   .customers, .blog, .videos{
@@ -1623,7 +1619,7 @@ body{
     &__img__label{
       left: 0;
       bottom: 20px;
-      .icon{
+      .select_team_icon{
         margin-right: 5px;
       }
       .label{
