--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -278,13 +278,13 @@ body{
     &::before{
       content: "";
       position: absolute;
-      right: -270px;
-      bottom: -21px;
-      background: rgba( 0, 0, 0, 0.5 );
-      transform: rotate(-5deg) skew(60deg);
-      filter: blur(40px);
+      right: -250px;
+      bottom: -20px;
+      background: rgba(113, 108, 108, 0.4);
+      transform: rotate(-9deg) skew(75deg);
+      filter: blur(20px);
       z-index: -1;
-      height: 5%;
+      height: 10%;
       width: 90%;
     }
   }
@@ -378,6 +378,7 @@ body{
             padding: 10px 15px 12px 15px;
             border: 1px solid #f0f1f7;
             border-radius: 30px;
+            min-width: 70px;
           }
           div{
             color: $text_color;
@@ -429,7 +430,6 @@ body{
           font-weight: 300;
           right: 0;
           top: 4px;
-          font-weight: 300;
           font-size: 50px;
           line-height: 50px;
         }
@@ -543,7 +543,7 @@ body{
     border-radius: 50%;
   }
   &__introduction{
-    padding-left: 30px;
+    padding-left: 75px;
     padding-top: 486px;
     padding-bottom: 518px;
     &>p{
@@ -727,7 +727,7 @@ body{
       align-items: center;
       padding: 0 15px;
       transition: 0.3s;
-      &:hover{
+      &:hover, &.swiper-slide-active{
         opacity: 1;
         box-shadow: 0 15px 70px rgba(56, 66, 77, 0.04);
         border-radius: 0 8px 0 0;
@@ -747,6 +747,9 @@ body{
         padding: 21px 55px 26px;
         border-radius: 4px;
         box-shadow: 0 15px 70px rgba(46, 197, 192, 0.3);
+        &:hover{
+          box-shadow: none;
+        }
       }
     }
   }
@@ -886,11 +889,18 @@ body{
     }
     .swiper-container{
       padding-bottom: 40px;
+      .swiper-slide-active{
+        .read_more_wrapper{
+          visibility: visible;
+          opacity: 1;
+        }
+      }
     }
     .title{
       margin-bottom: 45px;
       display: inline-block;
       background-color: white;
+      padding-left: 20px;
     }
     .post_wrapper{
       padding: 35px 30px 50px 30px;
@@ -984,6 +994,7 @@ body{
     background-color: white;
     display: inline-block;
     margin-bottom: 40px;
+    padding-left: 20px;
   }
 }
 
@@ -991,6 +1002,15 @@ body{
 .videos{
   margin-bottom: 119px;
   position: relative;
+  &::before{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #f9f9f9;
+    top: 40%;
+    bottom: 0;
+  }
   &__wrapper{
     &::after{
       content: '';
@@ -1008,6 +1028,7 @@ body{
     margin-bottom: 49px;
     background-color: white;
     display: inline-block;
+    padding-left: 20px;
   }
   .item{
     position: relative;
@@ -1316,13 +1337,12 @@ body{
         font-size: 24px;
         margin-bottom: 5px;
         position: relative;
-        color: white;
         &::after{
           content: '';
           display: block;
           position: absolute;
           height: 3px;
-          width: 0;
+          width: 100%;
           background-color: white;
           bottom: -4px;
           left: 0;
@@ -1331,7 +1351,7 @@ body{
         }
         &:hover{
           &::after{
-            width: 100%;
+            width: 0;
           }
         }
       }
@@ -1363,13 +1383,10 @@ body{
       li{
         display: flex;
         align-items: center;
-        padding: 16px;
+        padding: 12px;
         background-color: #f0f1f7;
         border-radius: 49px;
         transition: 0.3s;
-        p{
-          margin-bottom: 0 !important;
-        }
         &:hover{
           background-color: $accent_color;
           p{
@@ -1383,10 +1400,10 @@ body{
           text-align: center;
           flex: 0 0 auto;
           font-size: 20px;
-          line-height: 68px;
+          line-height: 50px;
           margin-left: 24px;
-          width: 68px;
-          height: 68px;
+          width: 50px;
+          height: 50px;
           border-radius: 34px;
           background-color: white;
         }
