--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -122,10 +122,7 @@ body{
         a{
           color: #ff4342;
           transition: 0.1s;
-          font-weight: 400;
-          &:hover{
-            font-weight: 700;
-          }
+          font-weight: 700;
         }
       }
       h3{
@@ -202,8 +199,18 @@ body{
   }
   &__img_wrapper{
     position: relative;
-    right: -30px;
     text-align: center;
+    .web_design_sec_slider{
+      position: absolute;
+      top: 6%;
+      left: 12%;
+      right: 11%;
+      bottom: 12%;
+      .swiper-container{
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
   &__text{
     color: $text_color;
@@ -623,7 +630,7 @@ body{
 
 /*----------- Portfolio -------------*/
 .portfolio{
-  margin-bottom: 87px;
+  margin-bottom: 40px;
   padding-bottom: 300px;
   padding-top: 30px;
   position: relative;
@@ -746,6 +753,7 @@ body{
         padding: 21px 55px 26px;
         border-radius: 4px;
         box-shadow: 0 15px 70px rgba(46, 197, 192, 0.3);
+        transition: 0.3s;
         &:hover{
           box-shadow: none;
         }
@@ -871,7 +879,7 @@ body{
 
 /*--------------------------------- Blog -------------------------------------*/
 .blog{
-  margin-bottom: 82px;
+  margin-bottom: 40px;
   &__wrapper{
     position: relative;
     &::after{
@@ -966,7 +974,7 @@ body{
 
 /*----------- Customers -------------*/
 .customers{
-  margin-bottom: 134px;
+  margin-bottom: 40px;
   &__wrapper{
     position: relative;
     padding-top: 72px;
@@ -999,7 +1007,7 @@ body{
 
 /*----------- Videos -------------*/
 .videos{
-  margin-bottom: 119px;
+  margin-bottom: 40px;
   position: relative;
   &::before{
     content: "";
@@ -1113,7 +1121,7 @@ body{
 
 /*--------------------------------- services card -------------------------------------*/
 .services_card{
-  margin-bottom: 162px;
+  margin-bottom: 40px;
   .title{
     margin-bottom: 63px;
   }
@@ -1181,7 +1189,7 @@ body{
 
 /*--------------------------------- podcast -------------------------------------*/
 .podcast{
-  margin-bottom: 605px;
+  margin-bottom: 40px;
   &__container{
     display: flex;
     align-items: center;
@@ -1304,8 +1312,8 @@ body{
   background-color: $accent_color;
   padding-top: 54px;
   padding-bottom: 26px;
-  margin-bottom: 233px;
-  margin-top: 70px;
+  margin-bottom: 140px;
+  margin-top: 100px;
   &__img{
     position: absolute;
     right: 0;
@@ -1360,7 +1368,7 @@ body{
 
 /*----------- Order -------------*/
 .order{
-  margin-bottom: 100px;
+  margin-bottom: 40px;
   &__content{
     padding-right: 100px;
     position: relative;
@@ -1468,6 +1476,14 @@ body{
     .categories_title_list{
       margin-bottom: 10px !important;
     }
+  }
+}
+
+/*----------------------> 992px and <1200px ------------------------*/
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .web_design_sec_slider{
+    left: 21% !important;
+    right: 20% !important;
   }
 }
 
