faq section first question is open and the portfolio slider for web design sec was created

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -209,6 +209,10 @@ body{
       .swiper-container{
         width: 100%;
         height: 100%;
+        .swiper-slide{
+          background-position: center;
+          background-size: cover;
+        }
       }
     }
   }
