--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -581,6 +581,8 @@ body{
 .services{
   position: relative;
   margin-bottom: 40px;
+  padding-top: 160px;
+  padding-bottom: 160px;
   &::before{
     position: absolute;
     display: block;
@@ -594,17 +596,20 @@ body{
     border-radius: 50%;
   }
   &__content{
-    padding-left: 75px;
-    padding-top: 486px;
-    padding-bottom: 518px;
+    margin-bottom: 20px;
+    //padding-left: 75px;
+    //padding-top: 100px;
+    //padding-bottom: 100px;
     //&>p{
     //  line-height: 35px;
     //  text-align: justify;
     //  margin-bottom: 0 !important;
     //}
   }
-  &__list{
-    margin-right: 20px;
+  .col-md-12{
+    padding-right: 15px;
+    padding-left: 15px;
+  }
     &__item{
       border-radius: 8px;
       border: 1px solid #f0f1f7;
@@ -654,7 +659,6 @@ body{
         }
       }
     }
-  }
 }
 
 /*----------- Ivahid difference -------------*/
