--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,10 +1,12 @@
+@import '../../../node_modules/normalize.css/normalize';
+
 @import '../../../node_modules/swiper/swiper-bundle';
 
 @import 'variables';
 
 @import 'font_icon_style';
 
-//@import './reset';
+@import './reset';
 
 /*
 Table of content
@@ -420,7 +422,7 @@ body{
 
 /*--------------------------------- Your position -------------------------------------*/
 .your_position{
-  background-image: url('img/dots_background.png');
+  background-image: url('img/your_position_back_1.png');
   background-position-y: center;
   background-position-x: 100%;
   background-repeat: no-repeat;
