--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -233,10 +233,11 @@ body{
   &::before{
     position: absolute;
     left: 0;
-    top: 0;
+    top: 50%;
+    transform: translateY( -50% );
     display: block;
     content: '';
-    height: 100%;
+    height: 80%;
     width: 40%;
     border-radius: 0 140px 140px 0;
     background-color: #f9f9f9;
@@ -306,6 +307,7 @@ body{
   }
   &__content{
     margin-bottom: 30px;
+    padding-left: 15px;
     //color: $text_color;
     //text-align: justify;
     .title{
