--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -137,13 +137,13 @@ body{
     text-align: right;
     color: $text_color;
     font-size: 18px;
-    &__title{
-      margin: 0;
-      color: $text_color;
-      font-size: 20px;
-      font-weight: 700;
-      padding: 18px 0 37px;
-    }
+    //&__title{
+    //  margin: 0;
+    //  color: $text_color;
+    //  font-size: 20px;
+    //  font-weight: 700;
+    //  padding: 18px 0 37px;
+    //}
     &__content{
       h2{
         color: #333333;
